fix in logFilter